--- a/Areas/Admin/Views/User/Index.cshtml
+++ b/Areas/Admin/Views/User/Index.cshtml
@@ -42,7 +42,7 @@
             </div>
 
             <div>
-                <a asp-action="Create" class="btn btn-outline-primary">
+                <a asp-action="Create" class="btn btn-primary shadow-sm">
                     <i class="fa fa-user-plus me-1"></i> Add New User
                 </a>
             </div>
